sw/CppunitTest_sw_rtfimport.mk
@@ -25,6 +25,7 @@ $(eval $(call gb_CppunitTest_use_libraries,sw_rtfimport, \
     sfx \
 	subsequenttest \
 	i18nlangtag \
+	svl \
 	sw \
 	swqahelper \
     test \
